# oito

./: CNAME  README.md  index.js  style.css  t  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
.github/workflows/: ghpages.yml
bitacora/: 00-Starting.md  01-Planning_the_architecture.md  02-Initilization.md  03-Exceptions.md  04-Basic components.md  04-CPU tick.md  05-Tick.md  06-Instructions.md  07-Interface.md
oito_core/: Cargo.toml  README.md
oito_core/src/: core.rs  cpu.rs  exception.rs  fontset.rs  instruction.rs  key.rs  keymap.rs  lib.rs  ram.rs  stack.rs  timer.rs  vram.rs
oito_core/src/core/: instructions_test.rs  operations.rs
oito_core/src/cpu/: alu.rs  bitmask.rs  ireg.rs  register.rs  stack.rs  timer.rs  vreg.rs
oito_core/src/key/: keymap.rs
rom_loader/: Cargo.toml
rom_loader/src/: desktop.rs  lib.rs
sdl2/: Cargo.toml  README.md
sdl2/src/: args.rs  input.rs  main.rs  render.rs  sound.rs
wasm/: Cargo.toml  README.md
wasm/src/: input.rs  lib.rs
wasm/web/: .gitignore  index.html  index.js  style.css
web/: index.html  index.js
