[package]
name = "sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oito_core = { path = "../oito_core" }
quicli = "0.4"
rom_loader = { path = "../rom_loader" }
sdl2 = "^0.34.3"
structopt = "0.2"
