[package]
name = "sdl2"
description = "SDL2 front-end for Oito"
version = "0.1.0"
authors = ["Soto Estévez <ricardo@sotoestevez.dev>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/kriogenia/oito"
repository = "https://github.com/kriogenia/oito/sdl2"
license = "MIT OR Apache-2.0"
keywords = [ "chip8", "emulation", "sdl2", "graphics" ]
categories = [ "emulators" ]

[dependencies]
hex = "0.4.3"
oito_core = { path = "../oito_core" }
quicli = "0.4"
rom_loader = { path = "../rom_loader" }
sdl2 = "^0.34.3"
structopt = "0.2"
