[package]
name = "wasm"
description = "WebAssembly front-end bundler for Oito"
version = "0.1.0"
authors = ["Soto Estévez <ricardo@sotoestevez.dev>"]
edition = "2021"
readme = "./README.md"
homepage = "https://oito.sotoestevez.dev"
repository = "https://github.com/kriogenia/oito/wasm"
license = "MIT OR Apache-2.0"
keywords = [ "chip8", "emulation", "wasm", "graphics", "web" ]
categories = [ "emulators", "wasm" ]

[lib]
crate-type = ["cdylib"]

[dependencies]
oito_core = { path = "../oito_core" }
js-sys = "^0.3"
wasm-bindgen = "^0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"CanvasRenderingContext2d",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"ImageData",
	"KeyboardEvent",
	"Window",
]
